--- a/login.html
+++ b/login.html
@@ -19,12 +19,12 @@
 
 				<div id='menu-item-container'>
 
-					<ul id='menu-items'>
-						<a href=#><li>Order material</li></a>
-						<a href=#><li>Education</li></a>
-						<a href='mypage.html'><li>My page</li></a>
-						<a href='login.html'><li>Log in</li></a>
-					</ul>
+						<ul id='menu-items'>
+							<a href=#><li>Order material</li></a>
+							<a href=#><li>Education</li></a>
+							<a href='mypage.html'><li>My page</li></a>
+              <a href='login.html'><li>Log in</li></a>
+						</ul>
 
 						<div id='search-bar'></div>
 
@@ -36,7 +36,22 @@
 
 		<main>
 
+      <div id='loginbox'>
 
+          <form novalidate='novalidate'>
+
+            <label>
+              <input type='email' />
+            </label>
+            <label>
+              <input type='password' />
+            </label>
+
+          </form>
+
+          <p>No account? <a href=#>Register here!</a></p>
+
+      </div>
 
     </main>
 	</body>
