--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 							<a href=#><li>Order material</li></a>
 							<a href=#><li>Education</li></a>
 							<a href='mypage.html'><li>My page</li></a>
-              <a href='login.html'><li>Log in</li></a>
+              <a href='login.html' class='active'><li>Log in</li></a>
 						</ul>
 
 						<div id='search-bar'></div>
@@ -38,6 +38,8 @@
 
       <div id='loginbox'>
 
+					<h1>Log in</h1>
+
           <form novalidate='novalidate'>
 
             <label>
@@ -49,7 +51,8 @@
 
           </form>
 
-          <p>No account? <a href=#>Register here!</a></p>
+          <p>No account? <a href='register.html'>Register here!</a></p>
+
 
       </div>
 
