--- a/register.html
+++ b/register.html
@@ -37,7 +37,9 @@
 		<main>
 
       <div id='loginbox'>
-
+					<a href='login.html'>< back to login</a>
+					<br />
+					<br />
 	        <h1>Registration</h1>
 
 					<form id='register' novalidate='novalidate'>
@@ -59,6 +61,10 @@
 															<option value="Finland">Finland</option>
 													</select>
 						            </label>
+
+												<div class='buttoncontainer'>
+														<button class='nextstep'>next step ></button>
+												</div>
 		                </div>
 
 		          </li>
@@ -77,6 +83,12 @@
 											<label>Last name
 												<input type='text' />
 											</label>
+
+											<div class='buttoncontainer'>
+													<button class='prevstep'>< previous step</button>
+													<button class='nextstep'>next step ></button>
+											</div>
+
 		              </div>
 
 		          </li>
@@ -89,6 +101,12 @@
 
 		              <div class='reg_content'>
 		                <p>Please check that the following information is correct</p>
+
+										<div class='buttoncontainer'>
+											<button class='prevstep'>< previous step</button>
+												<input type='submit' value='ok, register' />
+										</div>
+
 		              </div>
 
 		          </li>
@@ -100,10 +118,11 @@
 		              </button>
 
 		              <div class='reg_content'>
-		                <p>Content for step 4</p>
-										<div class='buttoncontainer'>
-												<input type='submit' value='next step >' />
-										</div>
+		                <p>Registration successful
+											<br />
+											Signing in...
+										</p>
+
 		              </div>
 
 		          </li>
