my page trash icon

--- a/mypage.html
+++ b/mypage.html
@@ -52,14 +52,45 @@
           <li class="latest-item">
             <div class="eLearning">
               <h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
               <p>A new eLearning course about leadership is available.</p>
             </div>
           </li>
-          <li class="latest-item"></li>
-          <li class="latest-item"></li>
-          <li class="latest-item"></li>
-          <li class="latest-item"></li>
-          <li class="latest-item"></li>
+          <li class="latest-item">
+						<div class="eLearning">
+							<h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
+							<p>A new eLearning course about leadership is available.</p>
+						</div>
+					</li>
+          <li class="latest-item">
+						<div class="eLearning">
+							<h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
+							<p>A new eLearning course about leadership is available.</p>
+						</div>
+					</li>
+          <li class="latest-item">
+						<div class="eLearning">
+							<h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
+							<p>A new eLearning course about leadership is available.</p>
+						</div>
+					</li>
+          <li class="latest-item">
+						<div class="eLearning">
+							<h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
+							<p>A new eLearning course about leadership is available.</p>
+						</div>
+					</li>
+          <li class="latest-item">
+						<div class="eLearning">
+							<h3>eLearning Leadership</h3>
+							<img src="img/trash.png" class="trash"/>
+							<p>A new eLearning course about leadership is available.</p>
+						</div>
+					</li>
         </ul>
       </div>
     </main>
