Responsive + trash function

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -38,10 +38,10 @@
 
       <div class="mypage-container">
         <h1><a href='mypage.html'>My Page</a></h1>
-        <h4>Hello Erik! Welcome to your Page. Below is an overview of all your personal things!</h4>
+        <h4>Welcome to your Bookmarks page.</h4>
         <ul class="mypagelink">
           <li class="newsletter">Newsletter<br>Preferences</li>
-          <li class="bookmarks"><a href='bookmarks.html'>Bookmarks</a></li>
+          <li class="bookmarks">Bookmarks</li>
           <li class="education">Education</li>
           <li class="itemone">Item One</li>
           <li class="itemtwo">Item Two</li>
@@ -88,7 +88,7 @@
 						<div class="eLearning">
 							<h3>eLearning Diabetes</h3>
 							<img src="img/trash.png" class="trash"/>
-							<p>A new eLearning course about disabetes is available.</p>
+							<p>A new eLearning course about diabetes is available.</p>
 						</div>
 					</li>
         </ul>
