animation slide left, right boomarks

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,8 +5,11 @@
 		<meta charset="utf-8" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900" rel="stylesheet">
 		<link href="css/main.css" type="text/css" rel="stylesheet" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/scripts.js"></script>
+
+
 	</head>
 	<body>
 
@@ -39,13 +42,18 @@
       <div class="mypage-container">
         <h1><a href='mypage.html'>My Page</a></h1>
         <h4>Welcome to your Bookmarks page.</h4>
-        <ul class="mypagelink">
-          <li class="newsletter">Newsletter<br>Preferences</li>
-          <li class="bookmarks">Bookmarks</li>
-          <li class="education">Education</li>
-          <li class="itemone">Item One</li>
-          <li class="itemtwo">Item Two</li>
-        </ul>
+				<div class="mypagelink-container">
+					<a href="#" class="arrow-right"><i class="fas fa-angle-left"></i></a>
+						<ul class="mypagelink">
+							<a href="#"><li class="newsletter">Newsletter<br>Preferences</li></a>
+							<a href=bookmarks.html><li class="bookmarks1">Bookmarks</li></a>
+		          <a href="#"><li class="education">Education</li></a>
+		          <a href="#"><li class="itemone">Item One</li></a>
+		          <a href="#"><li class="itemtwo">Item Two</li></a>
+		        </ul>
+					<a href="#" class="arrow-right"><i class="fas fa-angle-right"></i></a>
+				</div>
+
       </div>
       <div class="mypagelatest-container">
         <ul class="latest">
