--- a/mypage.html
+++ b/mypage.html
@@ -39,12 +39,12 @@
       <div class="mypage-container">
         <h1><a href='mypage.html'>My Page</a></h1>
         <h4>Hello Erik! Welcome to your Page. Below is an overview of all your personal things!</h4>
-        <ul class="mypagelink">
-          <li class="newsletter">Newsletter<br>Preferences</li>
-          <li class="bookmarks"><a href='bookmarks.html'>Bookmarks</a></li>
-          <li class="education">Education</li>
-          <li class="itemone">Item One</li>
-          <li class="itemtwo">Item Two</li>
+				<ul class="mypagelink">
+					<a href="#"><li class="newsletter">Newsletter<br>Preferences</li></a>
+					<a href=bookmarks.html><li class="bookmarks">Bookmarks</li></a>
+          <a href="#"><li class="education">Education</li></a>
+          <a href="#"><li class="itemone">Item One</li></a>
+          <a href="#"><li class="itemtwo">Item Two</li></a>
         </ul>
       </div>
       <div class="mypagelatest-container">
