--- a/bookmarks.html
+++ b/bookmarks.html
@@ -7,6 +7,7 @@
 		<link href="css/main.css" type="text/css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <script src="js/jquery-3.2.1.min.js"></script>
+				<script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/scripts.js"></script>
 
 
