--- a/mypage.html
+++ b/mypage.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900" rel="stylesheet">
 		<link href="css/main.css" type="text/css" rel="stylesheet" />
+				<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/scripts.js"></script>
 	</head>
