Fixed fadeOut error

--- a/mypage.html
+++ b/mypage.html
@@ -56,44 +56,20 @@
         <ul class="latest">
           <li class="latest-item">
             <div class="eLearning">
-              <h3>eLearning Leadership</h3>
-							<img src="img/trash.png" class="trash"/>
-              <p>A new eLearning course about leadership is available.</p>
+              <h3>Sample news item</h3>
+              <p>Some sample news that may interest you.</p>
             </div>
           </li>
           <li class="latest-item">
 						<div class="eLearning">
-							<h3>eLearning medical english</h3>
-							<img src="img/trash.png" class="trash"/>
-							<p>An eLearning course teaching basic medical english is available.</p>
+							<h3>Sample news item</h3>
+							<p>Some sample news that may interest you.</p>
 						</div>
 					</li>
           <li class="latest-item">
 						<div class="eLearning">
-							<h3>eLearning teamwork</h3>
-							<img src="img/trash.png" class="trash"/>
-							<p>A new eLearning course about teamwork is available.</p>
-						</div>
-					</li>
-          <li class="latest-item">
-						<div class="eLearning">
-							<h3>eLearning Communication</h3>
-							<img src="img/trash.png" class="trash"/>
-							<p>A new eLearning course about communication is available.</p>
-						</div>
-					</li>
-          <li class="latest-item">
-						<div class="eLearning">
-							<h3>Introduction to eLearning</h3>
-							<img src="img/trash.png" class="trash"/>
-							<p>A tutorial course about elearning.</p>
-						</div>
-					</li>
-          <li class="latest-item">
-						<div class="eLearning">
-							<h3>eLearning Diabetes</h3>
-							<img src="img/trash.png" class="trash"/>
-							<p>A new eLearning course about disabetes is available.</p>
+							<h3>Sample news item</h3>
+							<p>Some sample news that may interest you.</p>
 						</div>
 					</li>
         </ul>
