--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <script src="js/jquery-3.2.1.min.js"></script>
 				<script src="js/jquery-3.3.1.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
 
 
 	</head>
