fixed loggin in and stuff

--- a/register.html
+++ b/register.html
@@ -54,6 +54,7 @@
 
 		                <div class='reg_content'>
 						            <label>Please select your country of work
+													<br>
 						              <select name='country' form='selectcountry' />
 															<option value="Sweden">Sweden</option>
 															<option value="Norway">Norway</option>
@@ -62,6 +63,7 @@
 													</select>
 						            </label>
 
+												<br><br>
 												<div class='buttoncontainer'>
 														<button class='nextstep'>next step ></button>
 												</div>
@@ -77,6 +79,7 @@
 
 		              <div class='reg_content'>
 											<p>Please fill in your details below</p>
+											<br>
 											<label>First name
 												<input type='text' id='firstname' required='required' />
 												<div class='errormessage'>Please enter your first name</div>
@@ -94,6 +97,7 @@
 												<div class='errormessage'>Please enter your workplace</div>
 											</label>
 
+											<br><br>
 											<div class='buttoncontainer'>
 													<button class='prevstep'>< previous step</button>
 													<button class='nextstep'>next step ></button>
@@ -121,6 +125,8 @@
 
 										</div>
 
+										<br><br>
+
 										<div class='buttoncontainer'>
 											<button class='prevstep'>< previous step</button>
 												<input type='submit' value='ok, register' />
@@ -141,6 +147,7 @@
 											<br />
 											Signing in...
 										</p>
+										<div class="loader"></div>
 
 		              </div>
 
