--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,7 +26,7 @@
 					<ul id='menu-items'>
 						<a href=#><li>Order material</li></a>
 						<a href=#><li>Education</li></a>
-						<a href='mypage.html'><li>My page</li></a>
+						<a href='mypage.html' class='active'><li>My page</li></a>
 						<a href='login.html'><li>Log in</li></a>
 					</ul>
 
