prevent next if no fill, done

--- a/register.html
+++ b/register.html
@@ -100,7 +100,7 @@
 											<br><br>
 											<div class='buttoncontainer'>
 													<button class='prevstep'>< previous step</button>
-													<button class='nextstep'>next step ></button>
+													<button class='nextstep validate'>next step ></button>
 											</div>
 
 		              </div>
