prevent to go step 3 if no fill

--- a/register.html
+++ b/register.html
@@ -109,7 +109,7 @@
 
 		          <li class='reg_step' id='step_3'>
 
-		              <button class='regstep_button'>
+		              <button class='regstep_button noclick'>
 		                3. Further information
 		              </button>
 
