fixed not click confirm
Thats left: form submits on further info button if validation runned

--- a/register.html
+++ b/register.html
@@ -109,7 +109,7 @@
 
 		          <li class='reg_step' id='step_3'>
 
-		              <button class='regstep_button noclick'>
+		              <button class='regstep_button noclick furtherinfo'>
 		                3. Further information
 		              </button>
 
@@ -136,11 +136,11 @@
 
 		          </li>
 
-		          <li class='reg_step' id='step_4'>
+		          <li class='reg_step confirm_step' id='step_4'>
 
-		              <button class='regstep_button'>
+		              <div class='confirm_button'>
 		                4. Confirmation
-		              </button>
+		              </div>
 
 		              <div class='reg_content'>
 		                <p>Registration successful
