--- a/login.html
+++ b/login.html
@@ -43,9 +43,11 @@
           <form novalidate='novalidate'>
 
             <label>
+							Email
               <input type='email' />
             </label>
             <label>
+							Password
               <input type='password' />
             </label>
 
