--- a/register.html
+++ b/register.html
@@ -48,9 +48,9 @@
 
 		          <li class='reg_step' id='step_1'>
 
-		                <button class='regstep_button'>
+		                <h2 class='stepheader'>
 		                  1. Country selection
-		                </button>
+		                </h2>
 
 		                <div class='reg_content'>
 						            <label><h3>Please select your country of work</h3>
@@ -73,9 +73,9 @@
 
 		          <li class='reg_step' id='step_2'>
 
-		              <button class='regstep_button'>
+		              <h2 class='stepheader'>
 		                2. Validation
-		              </button>
+		              </h2>
 
 		              <div class='reg_content'>
 											<h3>Please fill in your details below</h3>
@@ -112,9 +112,9 @@
 
 		          <li class='reg_step' id='step_3'>
 
-		              <button class='regstep_button noclick furtherinfo'>
-		                3. Further information
-		              </button>
+		              <h2 class='stepheader'>
+		                3. Review details
+		              </h2>
 
 		              <div class='reg_content'>
 		                <h3>Please check that the following information is correct</h3><br /><br />
@@ -142,9 +142,9 @@
 
 		          <li class='reg_step confirm_step' id='step_4'>
 
-		              <div class='confirm_button'>
+		              <h2 class='stepheader'>
 		                4. Confirmation
-		              </div>
+		              </h2>
 
 		              <div class='reg_content'>
 		                <h3>Registration successful</h3>
