--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 
 		<main>
 
-      <div id='loginbox'>
+      <div id='loginbox' style='padding: 20px;'>
 
 					<h1>Log in</h1>
 
@@ -51,9 +51,14 @@
               <input type='password' />
             </label>
 
+						<button class='loginbutton'>Log in</button>
+
           </form>
 
-          <p>No account? <a href='register.html'>Register here!</a></p>
+					<br><br><br><br>
+
+
+          <p class='registercall'>No account? <a href='register.html'>Register here!</a></p>
 
 
       </div>
