--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
 
 		<main>
 
+			<div id='heroimage'></div>
 
+			<section id='welcome'>
+
+
+				<h1>Welcome to Pharmaceutical Inc!</h1>
+				<p>Please <a href='login.html'>log in</a> or register to be able to access your page, order material,  participate in e-learning, and much more.</p>
+			</section>
+
+			<section id='article_area'>
+
+				<h2>News</h2>
+
+					<div class='article'></div>
+					<div class='article'></div>
+					<div class='article'></div>
+					<div class='article'></div>
+					<div class='article'></div>
+					<div class='article'></div>
+
+			</section>
 
     </main>
 	</body>
